Fix displaying overflow bar in laptop mode and add a padding top for blog button...

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1071,7 +1071,8 @@ aside {
 
   .posts>.wrapper {
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
+    padding-top: 20px;
   }
 
   .posts .wrapper:first-of-type {
